@@ -1,69 +1,53 @@
 package org.bukkit.craftbukkit.legacy.reroute;
 
 import com.google.common.base.Preconditions;
-import java.lang.reflect.AnnotatedElement;
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.lang.reflect.Parameter;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.function.Predicate;
 import org.bukkit.craftbukkit.util.ApiVersion;
 import org.objectweb.asm.Type;
 
 public class RerouteBuilder {
 
-    private final List<Class<?>> classes = new ArrayList<>();
-    private final Predicate<String> compatibilityPresent;
-
-    private RerouteBuilder(Predicate<String> compatibilityPresent) {
-        this.compatibilityPresent = compatibilityPresent;
-    }
-
-    public static RerouteBuilder create(Predicate<String> compatibilityPresent) {
-        return new RerouteBuilder(compatibilityPresent);
-    }
-
-    public RerouteBuilder forClass(Class<?> clazz) {
-        this.classes.add(clazz);
-        return this;
-    }
-
-    public Reroute build() {
-        Map<String, Reroute.RerouteDataHolder> rerouteDataHolderMap = new HashMap<>();
-
-        for (Class<?> clazz : this.classes) {
-            List<RerouteMethodData> data = RerouteBuilder.buildFromClass(clazz, this.compatibilityPresent);
-            data.forEach(value -> rerouteDataHolderMap.computeIfAbsent(value.methodKey(), v -> new Reroute.RerouteDataHolder()).add(value));
-        }
-
-        return new Reroute(rerouteDataHolderMap);
-    }
-
-    private static List<RerouteMethodData> buildFromClass(Class<?> clazz, Predicate<String> compatibilityPresent) {
+    public static Map<String, RerouteMethodData> buildFromClass(Class<?> clazz) {
         Preconditions.checkArgument(!clazz.isInterface(), "Interface Classes are currently not supported");
 
-        List<RerouteMethodData> result = new ArrayList<>();
-        boolean shouldInclude = RerouteBuilder.shouldInclude(RerouteBuilder.getRequireCompatibility(clazz), true, compatibilityPresent);
+        Map<String, RerouteMethodData> result = new HashMap<>();
 
         for (Method method : clazz.getDeclaredMethods()) {
-            if (!RerouteBuilder.isMethodValid(method)) {
+            if (method.isBridge()) {
                 continue;
             }
 
-            if (!RerouteBuilder.shouldInclude(RerouteBuilder.getRequireCompatibility(method), shouldInclude, compatibilityPresent)) {
+            if (method.isSynthetic()) {
                 continue;
             }
 
-            result.add(RerouteBuilder.buildFromMethod(method));
+            if (!Modifier.isPublic(method.getModifiers())) {
+                continue;
+            }
+
+            if (!Modifier.isStatic(method.getModifiers())) {
+                continue;
+            }
+
+            if (method.isAnnotationPresent(DoNotReroute.class)) {
+                continue;
+            }
+
+            RerouteMethodData rerouteMethodData = RerouteBuilder.buildFromMethod(method);
+            result.put(rerouteMethodData.source(), rerouteMethodData);
         }
 
-        return result;
+        return Collections.unmodifiableMap(result);
     }
 
-    private static RerouteMethodData buildFromMethod(Method method) {
+    public static RerouteMethodData buildFromMethod(Method method) {
         RerouteReturn rerouteReturn = new RerouteReturn(Type.getReturnType(method));
         List<RerouteArgument> arguments = new ArrayList<>();
         List<RerouteArgument> sourceArguments = new ArrayList<>();
@@ -129,10 +113,7 @@ public class RerouteBuilder {
         if (rerouteStatic != null) {
             sourceOwner = Type.getObjectType(rerouteStatic.value());
         } else {
-            if (sourceArguments.isEmpty()) {
-                throw new RuntimeException("Source argument list is empty, no owner class found");
-            }
-            RerouteArgument argument = sourceArguments.getFirst();
+            RerouteArgument argument = sourceArguments.get(0);
             sourceOwner = argument.sourceType();
             sourceArguments.remove(argument);
         }
@@ -154,11 +135,22 @@ public class RerouteBuilder {
             methodName = method.getName();
         }
 
-        String methodKey = sourceDesc.getDescriptor() + methodName;
+        String methodKey = sourceOwner.getInternalName()
+                + " "
+                + sourceDesc.getDescriptor()
+                + " "
+                + methodName;
 
         Type targetType = Type.getType(method);
 
         boolean inBukkit = !method.isAnnotationPresent(NotInBukkit.class) && !method.getDeclaringClass().isAnnotationPresent(NotInBukkit.class);
+
+        String requiredCompatibility = null;
+        if (method.isAnnotationPresent(RequireCompatibility.class)) {
+            requiredCompatibility = method.getAnnotation(RequireCompatibility.class).value();
+        } else if (method.getDeclaringClass().isAnnotationPresent(RequireCompatibility.class)) {
+            requiredCompatibility = method.getDeclaringClass().getAnnotation(RequireCompatibility.class).value();
+        }
 
         RequirePluginVersionData requiredPluginVersion = null;
         if (method.isAnnotationPresent(RequirePluginVersion.class)) {
@@ -167,47 +159,6 @@ public class RerouteBuilder {
             requiredPluginVersion = RequirePluginVersionData.create(method.getDeclaringClass().getAnnotation(RequirePluginVersion.class));
         }
 
-        return new RerouteMethodData(methodKey, sourceDesc, sourceOwner, methodName, rerouteStatic != null, targetType, Type.getInternalName(method.getDeclaringClass()), method.getName(), arguments, rerouteReturn, inBukkit, requiredPluginVersion);
-    }
-
-    private static boolean isMethodValid(Method method) {
-        if (method.isBridge()) {
-            return false;
-        }
-
-        if (method.isSynthetic()) {
-            return false;
-        }
-
-        if (!Modifier.isPublic(method.getModifiers())) {
-            return false;
-        }
-
-        if (!Modifier.isStatic(method.getModifiers())) {
-            return false;
-        }
-
-        if (method.isAnnotationPresent(DoNotReroute.class)) {
-            return false;
-        }
-
-        return true;
-    }
-
-    private static String getRequireCompatibility(AnnotatedElement element) {
-        RequireCompatibility annotation = element.getAnnotation(RequireCompatibility.class);
-        if (annotation == null) {
-            return null;
-        }
-
-        return annotation.value();
-    }
-
-    private static boolean shouldInclude(String string, boolean parent, Predicate<String> compatibilityPresent) {
-        if (string == null) {
-            return parent;
-        }
-
-        return compatibilityPresent.test(string);
+        return new RerouteMethodData(methodKey, sourceDesc, sourceOwner, methodName, rerouteStatic != null, targetType, Type.getInternalName(method.getDeclaringClass()), method.getName(), arguments, rerouteReturn, inBukkit, requiredCompatibility, requiredPluginVersion);
     }
 }
